<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chuangbang</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_add">添加</string>
    <string name="now_refresh_list">正在刷新好友</string>
    <string name="button_send">发送</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_picture">图片</string>
    <string name="select_from_album">从相册选择</string>
    <string name="prompt">提示</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="text_ack_msg">已读</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_message">删除消息</string>
    <string name="forward">转发</string>
    <string name="delete">删除</string>
    <string name="send_fail">发送消息失败</string>
    <string name="connect_failuer_toast">连接不到服务器，请稍后重试</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="resend">重发</string>
    <string name="server">服务</string>
    <string name="consultant">顾问咨询</string>
    <string name="tv_consultant">找不到靠谱外包？招不到牛B人才？开发频繁延期？</string>
    <string name="tv_write">巨头面前，初创团队难以吸引技术人才。创帮想要打破僵局，权威专家面对面咨询答疑。创业团队从中受益，满意度100%。</string>
    <string name="program_customization">方案定制</string>
    <string name="tv_program_customization">方案设计，架构优化，团队管理？</string>
    <string name="tv_write1">专家与初创团队面对面交流，提供深度解决方案，最受欢迎的精品服务，开放申请，名额有限。</string>
    <string name="strategic_support">战略支持</string>
    <string name="tv_strategic_support">长期+深度+全面的技术产品支持</string>
    <string name="tv_write2">创帮深度参与社交、制造业、衣穿住行等传统行业互联网改造创业，与你共成长。</string>
    <string name="btn_application_development">申请开发</string>
    <string name="tv_write3">\t\t创帮孵化器占地面积拥有6千平方，环境优美。浓厚的创业氛围，进驻创帮孵化器可以享受创帮为初创型公司提供项目指导、技术开发、融资对接、每月路演、注册公司、会计做帐、法律咨询、知识产权等服务。</string>
    <string name="tv_write4">(我们的投资机构：中通银泰、阿里资本、红杉资本、IDG资本等50多家)</string>
    <string name="btn_incubation_incubator">进驻孵化器</string>
    <string name="btn_accounting_do_account">会计做账</string>
    <string name="btn_registered_company">注册公司</string>
    <string name="btn_legal_advice">法律咨询</string>
    <string name="btn_intellectual_property_right">知识产权</string>
    <string name="found_fragment">项目对接</string>
    <string name="tr_set_founder_name">创始人姓名</string>
    <string name="tv_set_mine_nico">请输入姓名</string>
    <string name="tr_set_year_of_birth">出生年份</string>
    <string name="tv_set_year_of_birth">请选择出生日期</string>
    <string name="tr_set_phone_number">手机号码</string>
    <string name="tv_set_phone_number">请输入手机号码</string>
    <string name="tr_set_now_address">现所在地</string>
    <string name="tv_set_now_address">请输入现所在城市</string>
    <string name="tr_set_graduate_school">毕业学校</string>
    <string name="tv_set_graduate_school">请选择毕业学校</string>
    <string name="tr_set_graduate_time">毕业时间</string>
    <string name="tv_set_graduate_time">请输入毕业时间</string>
    <string name="tr_set_company_name">公司名称</string>
    <string name="tv_set_company_name">请输入公司名称</string>
    <string name="tr_set_team_number">团队人数</string>
    <string name="tv_set_team_number">请输入团队人数</string>
    <string name="tr_set_expected_time_to_be_settled">期望入驻时间</string>
    <string name="tv_set_expected_time_to_be_settled">请填写期望入驻孵化器时间</string>
    <string name="tr_set_remarks">备注:</string>
    <string name="tv_set_remaks">请简单介绍下项目</string>
    <string name="btn_commit">提交</string>
    <string name="tr_set_alternate_name">备用名称</string>
    <string name="tv_set_alternate_name">请输入五个备用名称</string>
    <string name="tr_set_nature_of_company">公司性质</string>
    <string name="tv_set_nature_of_company">请选择公司性质</string>
    <string name="tr_set_business_scope">经营范围</string>
    <string name="tv_set_business_scope">请选择公司经营范围</string>
    <string name="tr_number_of_shareholders">股东人数</string>
    <string name="tv_number_of_shareholders">请输入股东人数</string>
    <string name="tr_set_mine_name">姓名</string>
    <string name="tr_set_advisory_type">咨询类型</string>
    <string name="tv_set_advisory_type">请输入需要咨询的行业</string>
    <string name="et_legal_advice">请详细描述您所遇到的法律问题及需要律师帮助的地方，方便法律指导师进行电话回访。</string>
    <string name="tr_set_management_type">办理类型</string>
    <string name="tv_set_management_type">请选择办理类型</string>
    <string name="interviews_with_people">约谈的人</string>
    <string name="receive_bp">收到BP</string>
    <string name="focus_on_project">关注项目</string>
    <string name="my_delivery">我的投递</string>
    <string name="investor_certification">投资人认证</string>
    <string name="tv_investor_certification">请认真填写认证信息并提交</string>
    <string name="tr_set_mine_business_card">我的名片</string>
    <string name="tr_set_email">邮箱</string>
    <string name="tv_set_email">请输入邮箱</string>
    <string name="tr_set_investment_field">投资领域</string>
    <string name="tv_set_investment_field">请选择投资领域</string>
    <string name="tr_investment_stage">投资阶段</string>
    <string name="tv_investment_stage">请选择投资阶段</string>
    <string name="et_investor_certification">请输入已投过的案例</string>
    <string name="btn_submit_authentication">提交认证</string>
    <string name="educational_background">教育背景</string>
    <string name="tr_set_name_of_institution">院校名称</string>
    <string name="tr_set_major">专业</string>
    <string name="tr_set_admission_time">入学时间</string>
    <string name="please_select">请选择</string>
    <string name="btn_save">保存</string>
    <string name="work_experience">工作经验</string>
    <string name="tr_set_position">职位</string>
    <string name="tr_set_entry_time">入职时间</string>
    <string name="tr_set_departure_time">离职时间</string>
    <string name="my_advantage">我的优势</string>
    <string name="et_my_advantage">200字以内</string>
    <string name="application_development">申请开发</string>
    <string name="tr_set_wechat_or_App">微信/APP开发</string>
    <string name="tr_set_website_construction">网站建设</string>
    <string name="tr_set_application_development">说说您的具体要求：</string>
    <string name="tv_set_confirm">确认</string>
    <string name="btn_android_app">安卓APP</string>
    <string name="btn_iphone_app">苹果APP</string>
    <string name="btn_wechat_development">微信开发</string>
    <string name="btn_enterprise_app">企业APP</string>
    <string name="btn_social_contact_app">社交APP</string>
    <string name="btn_entertainment_app">娱乐APP</string>
    <string name="btn_order_app">点餐APP</string>
    <string name="btn_fresh_electricity_suppliers_app">生鲜电商APP</string>
    <string name="btn_tourism_app">旅游APP</string>
    <string name="btn_news_consultation_app">新闻资讯APP</string>
    <string name="btn_others">其他</string>
    <string name="btn_template_site">模板建站</string>
    <string name="btn_web_site_two_development">网站二次开发</string>
    <string name="btn_web_custom_development">网站定制开发</string>
    <string name="btn_front_end_development">前端开发</string>
    <string name="btn_web_testing">网站测试</string>
    <string name="btn_website_maintenance">网站维护</string>
    <string name="btn_enterprise_website">企业网站</string>
    <string name="btn_electricity_supplier_website">电商网站</string>
    <string name="btn_financial_management_website">金融理财网站</string>
    <string name="btn_flash_website">Flash网站</string>
    <string name="btn_government_website">政府网站</string>
    <string name="tv_set_my_project">我的项目</string>
    <string name="tv_set_create_project">创建项目</string>
    <string name="tv_set_next_step">下一步</string>
    <string name="tv_set_upload_project_ID">上传项目标识（LOGO）</string>
    <string name="tr_set_project_name">项目名称</string>
    <string name="tv_set_project_name">请输入项目名称</string>
    <string name="tr_set_project_status">项目状态</string>
    <string name="tv_set_project_status">请选择项目状态</string>
    <string name="tr_set_project_field">项目领域</string>
    <string name="tv_set_project_field">请选择项目领域</string>
    <string name="tr_set_project_web_site">项目网址</string>
    <string name="tv_set_project_web_site">请输入项目网址</string>
    <string name="tr_set_a_sentence_to_introduce_the_project">一句话介绍</string>
    <string name="tv_set_a_sentence_to_introduce_the_project">请输入介绍</string>
    <string name="tr_set_project_course">项目历程</string>
    <string name="tv_set_project_course">请填选项目历程</string>
    <string name="tr_set_project_description_or_team_advantage">项目描述/团队优势</string>
    <string name="tv_set_add_friends">添加好友</string>
    <string name="tv_set_add_cell_phone_contact">添加手机联系人</string>
    <string name="hint_set_phone_number_or_name">手机号码/姓名</string>
    <string name="tv_btn_add_project_course">添加项目历程</string>
    <string name="tr_set_time">时间</string>
    <string name="tr_set_event">事件</string>
    <string name="tv_set_event">请填写事件</string>
    <string name="tv_set_chat">聊天</string>
    <string name="tr_set_financing_information">融资信息</string>
    <string name="tr_financing_stage">融资阶段</string>
    <string name="tr_currency_financing">融资币种</string>
    <string name="tr_financing_amount">融资金额</string>
    <string name="tv_financing_amount">请输入\t万元</string>
    <string name="tr_transfer_of_shares">出让股份</string>
    <string name="tv_transfer_of_shares">请选择\t%（0-100）</string>
    <string name="btn_my_project">您的项目已投递3次</string>
    <string name="tv_set_nick">昵称</string>
    <string name="bt_resume_add_work">工作经历</string>
    <string name="tr_btn_add_project_course">添加项目历程</string>
    <string name="tv_set_my_resume">我的简历</string>
    <string name="btn_safe">安全</string>
    <string name="btn_media_entertainment">传媒娱乐</string>
    <string name="btn_electronic_product">电子产品</string>
    <string name="btn_electronic_commerce">电子商务</string>
    <string name="btn_real_estate">房地产</string>
    <string name="btn_service">服务</string>
    <string name="btn_IT_service">IT服务</string>
    <string name="btn_education_and_training">教育与培训</string>
    <string name="btn_finance">金融</string>
    <string name="btn_tourism">旅游</string>
    <string name="btn_automobile">汽车</string>
    <string name="btn_social_networks">社交网络</string>
    <string name="btn_bio_pharmaceutical">生物制药</string>
    <string name="btn_marketing">市场营销</string>
    <string name="btn_consumer_retail">消费者零售</string>
    <string name="btn_new_energy">新能源</string>
    <string name="btn_mobile">移动</string>
    <string name="btn_medical_care">医疗</string>
    <string name="btn_game">游戏</string>
    <string name="hint_please_enter">请输入</string>
    <string name="tv_input_box">输入框</string>
    <string name="tr_set_vip">VIP</string>
    <string name="tv_set_vip">*您还不是我们的会员，成为会员就可以跟投资人约谈啦 ！</string>
    <string name="tr_set_nick">梦开始的地方</string>
    <string name="tr_set_vip_un">（未开通会员）</string>
    <string name="tv_buy">购买记录</string>
    <string name="tv_monthly_fee">￥30.00/</string>
    <string name="tv_thirty_days">30天</string>
    <string name="tv_one_month">（1个月）</string>
    <string name="btn_buy">购买</string>
    <string name="tv_half_year_fee">￥128.00/</string>
    <string name="tv_one_hundred_and_eighty_days">180天</string>
    <string name="tv_half_a_year">（半年）</string>
    <string name="tv_year_fee">￥199.00/</string>
    <string name="tv_three_hundred_and_sixty_five_days">365天</string>
    <string name="tv_year">（全年）</string>

</resources>